# cogolo

./: .claudeignore  .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  SUPPORT.md  brainstorming.md  coverage-52207-445919904805855263_0.profraw  coverage-52225-445919904805855263_0.profraw  coverage-52329-11487371173418636043_0.profraw  coverage-52329-13841915290082911950_0.profraw  coverage-52329-15219514225738610765_0.profraw  coverage-52329-15264106951763933738_0.profraw  coverage-52329-1965510780563967261_0.profraw  coverage-52329-2436054952256243401_0.profraw  coverage-52329-3335953279267985196_0.profraw  coverage-52329-445919904805855263_0.profraw  coverage-52329-6914213322190406170_0.profraw  coverage-52329-7172662647057490828_0.profraw  coverage-52329-9043476406818017960_0.profraw  coverage-52329-996952329479090174_0.profraw  coverage-52339-11487371173418636043_0.profraw  coverage-52339-13841915290082911950_0.profraw  coverage-52339-15219514225738610765_0.profraw  coverage-52339-15264106951763933738_0.profraw  coverage-52339-1965510780563967261_0.profraw  coverage-52339-2436054952256243401_0.profraw  coverage-52339-3335953279267985196_0.profraw  coverage-52339-445919904805855263_0.profraw  coverage-52339-6914213322190406170_0.profraw  coverage-52339-7172662647057490828_0.profraw  coverage-52339-9043476406818017960_0.profraw  coverage-52339-996952329479090174_0.profraw  coverage-52348-11487371173418636043_0.profraw  coverage-52348-13841915290082911950_0.profraw  (+85 more)
.github/: pull_request_template.md
benchmarks/: README.md  check-regression.sh  run.sh  update-baseline.sh
ci/: coverage-targets.txt
crates/cogolo-registry/: Cargo.toml
crates/cogolo-registry/src/: lib.rs  workflows.rs
crates/cogolo-registry/tests/: registry.rs
crates/cogolo-runtime/: Cargo.toml
crates/cogolo-runtime/src/: lib.rs  workflows.rs
crates/cogolo-runtime/tests/: runtime.rs
crates/traverse-cli/: Cargo.toml
crates/traverse-cli/src/: agent_packages.rs  browser_adapter.rs  federation_operator.rs  http_api.rs  main.rs
crates/traverse-contracts/: Cargo.toml
crates/traverse-contracts/src/: lib.rs
crates/traverse-contracts/tests/: validation.rs
crates/traverse-expedition-wasm/: Cargo.toml
crates/traverse-expedition-wasm/src/: main.rs
crates/traverse-mcp/: Cargo.toml
crates/traverse-mcp/src/: context.rs  error.rs  lib.rs  main.rs  stdio_server.rs
crates/traverse-mcp/src/tools/: capabilities.rs  events.rs  mod.rs  traces.rs
crates/traverse-mcp/tests/: mcp_tests.rs
crates/traverse-runtime/: Cargo.toml  coverage-52426-13310026022185190451_0.profraw  coverage-52428-439562209463551722_0.profraw  coverage-52441-13824170401967673850_0.profraw  coverage-52444-11170972753124112619_0.profraw  coverage-52448-5769841909030443878_0.profraw  coverage-52456-5494674893125908529_0.profraw
crates/traverse-runtime/src/: lib.rs  workflows.rs
crates/traverse-runtime/src/events/: broker.rs  catalog.rs  mod.rs  types.rs
crates/traverse-runtime/src/executor/: mod.rs  native.rs  wasm.rs
crates/traverse-runtime/src/placement/: mod.rs
crates/traverse-runtime/src/router/: mod.rs
crates/traverse-runtime/src/trace/: mod.rs  private.rs  public.rs  store.rs
crates/traverse-runtime/tests/: event_broker_tests.rs  executor_tests.rs  expedition_wasm_tests.rs  placement_tests.rs  router_tests.rs  runtime.rs  trace_tests.rs
docs/: adapter-boundaries.md  ai-review-process.md  antipatterns.md  app-consumable-acceptance.md  app-consumable-consumer-bundle.md  app-consumable-entry-path.md  app-consumable-package-release-pointer.md  app-consumable-release-artifact.md  app-consumable-release-checklist.md  app-consumable-requirements-traceability.md  architecture-execution-models.md  benchmarks.md  browser-adapter.md  capability-contract-authoring-guide.md  cli-reference.md  compatibility-policy.md  contract-publication-policy.md  event-contract-authoring-guide.md  event-publishing-tutorial.md  exception-process.md  executable-package-template.md  expedition-example-authoring.md  expedition-example-registry-bundle.md  expedition-example-smoke.md  getting-started.md  killer-use-case-portable-knowledge-app.md  (+34 more)
(+221 files in other folders)
