[package]
name = "cogolo-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cogolo-contracts = { path = "../cogolo-contracts" }
semver = "1.0.27"

[dev-dependencies]
serde_json = "1.0.145"

[lints]
workspace = true
