[package]
name = "cogolo-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
cogolo-contracts = { path = "../cogolo-contracts" }
cogolo-registry = { path = "../cogolo-registry" }
semver = "1.0.27"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lints]
workspace = true
