[package]
name = "traverse-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
traverse-registry = { path = "../traverse-registry" }

[dev-dependencies]
serde_json = "1.0.145"
traverse-contracts = { path = "../traverse-contracts" }

[lints]
workspace = true
