[package]
name = "traverse-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde_json = "1.0.145"
traverse-contracts = { path = "../traverse-contracts" }
traverse-registry = { path = "../traverse-registry" }
traverse-runtime = { path = "../traverse-runtime" }

[lints]
workspace = true
