[package]
name = "traverse-expedition-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
# Required for wasm32-wasi compilation: the bin target produces the runnable
# WASM command; the cdylib is for tooling that expects a dynamic library.
description = "Expedition example domain compiled to wasm32-wasi — governed by spec 027-expedition-wasm-port."

[[bin]]
name = "traverse-expedition-wasm"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lints]
workspace = true
